--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>ikube</groupId>
         <artifactId>ikube</artifactId>
-        <version>5.1.0</version>
+        <version>5.2.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -40,6 +40,10 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
