--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -6,8 +6,42 @@
 	<packaging>war</packaging>
     <version>${ikube-version}</version>
 
+    <scm>
+        <url>https://github.com/michaelcouck/ikube</url>
+        <connection>scm:git:ssh://github.com/michaelcouck/ikube.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/michaelcouck/ikube.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>michaelcouck</id>
+            <email>michael.couck@gmail.com</email>
+            <name>Michael Couck</name>
+            <url>https://github.com/michaelcouck</url>
+        </developer>
+    </developers>
+
+    <distributionManagement>
+        <site>
+            <id>ikube-releases</id>
+            <name>ikube-releases</name>
+            <url>file:/home/michael/.m2/repository</url>
+        </site>
+        <repository>
+            <id>libs-release-local</id>
+            <name>libs-release-local</name>
+            <url>http://ikube.be/artifactory/libs-release-local</url>
+        </repository>
+        <snapshotRepository>
+            <id>libs-snapshot-local</id>
+            <name>libs-snapshot-local</name>
+            <url>http://ikube.be/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 	<properties>
-        <ikube-version>5.0.3</ikube-version>
+        <ikube-version>5.2.0</ikube-version>
 		<webapps>webapps</webapps>
 		<ikube.war>site.war</ikube.war>
 		<final.name>${project.build.finalName}.${project.packaging}</final.name>
@@ -15,25 +49,6 @@
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring.security.oauth.version>3.19</spring.security.oauth.version>
 	</properties>
-	
-    <scm>
-        <url>https://github.com/michaelcouck/ikube</url>
-        <connection>scm:git:git://github.com/michaelcouck/ikube.git</connection>
-        <developerConnection>scm:git:git@github.com:michaelcouck/ikube.git</developerConnection>
-    </scm>
-
-	<distributionManagement>
-		<site>
-			<id>ikube</id>
-			<name>ikube-releases</name>
-			<url>file:/home/michael/.m2/repository</url>
-		</site>
-		<repository>
-			<id>ikube</id>
-			<name>ikube-releases</name>
-			<url>http://ikube.be/artifactory/libs-release-local</url>
-		</repository>
-	</distributionManagement>
 
 	<build>
 	    <finalName>site</finalName>
