--- a/code/web/pom.xml
+++ b/code/web/pom.xml
@@ -1,16 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
+    <groupId>ikube</groupId>
 	<artifactId>ikube-web</artifactId>
+    <version>5.2.0</version>
 	<packaging>war</packaging>
 
-	<parent>
-		<groupId>ikube</groupId>
-		<artifactId>ikube</artifactId>
-        <version>5.1.0</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
-	
 	<properties>
 		<webapps>webapps</webapps>
 		<final.name>${project.build.finalName}.${project.packaging}</final.name>
@@ -29,10 +24,6 @@
 			</resource>
 		</resources>
 		<plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-            </plugin>
 			<!-- The default plugin for creating the war, we specify a version. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -73,20 +64,20 @@
             <artifactId>jetty-server</artifactId>
             <version>${jetty-version}</version>
             <type>jar</type>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
             <version>${jetty-version}</version>
             <type>jar</type>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>example-jetty-embedded</artifactId>
             <version>${jetty-version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
