--- a/pom.xml
+++ b/pom.xml
@@ -948,13 +948,19 @@
 			<!--<type>jar</type>-->
 			<!--<scope>compile</scope>-->
 		<!--</dependency>-->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.163</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.h2database</groupId>-->
+			<!--<artifactId>h2</artifactId>-->
+			<!--<version>1.3.163</version>-->
+			<!--<type>jar</type>-->
+			<!--<scope>compile</scope>-->
+		<!--</dependency>-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.176</version>
+            <scope>compile</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
