--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
                     <executions>
                         <execution>
                             <id>copy-configuration</id>
-                            <phase>test</phase>
+                            <phase>deploy</phase>
                             <configuration>
                                 <target>
                                     <!--<echo message="basedir : ${basedir}, ">basedir : ${basedir}</echo>
@@ -280,6 +280,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>2.3</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
