--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -697,6 +697,23 @@
                             <!--<url>${artifactory}</url>-->
                         <!--</configuration>-->
                     <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>combinatoricslib</id>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-file</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>install</phase>-->
+                        <!--<configuration>-->
+                            <!--<groupId>combinatoricslib</groupId>-->
+                            <!--<artifactId>combinatoricslib</artifactId>-->
+                            <!--<version>2.0</version>-->
+                            <!--<file>tools/miscellaneous/combinatoricslib-2.0.jar</file>-->
+                            <!--<packaging>${packaging}</packaging>-->
+                            <!--<generatePom>${generate-pom}</generatePom>-->
+                            <!--<repositoryId>${repository-id}</repositoryId>-->
+                            <!--<url>${artifactory}</url>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
                 </executions>
             </plugin>
         </plugins>
