--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
                     <executions>
                         <execution>
                             <id>copy-configuration</id>
-                            <phase>deploy</phase>
+                            <phase>test</phase>
                             <configuration>
                                 <target>
                                     <!--<echo message="basedir : ${basedir}, ">basedir : ${basedir}</echo>
@@ -1362,6 +1362,12 @@
             <groupId>args4j</groupId>
             <artifactId>args4j</artifactId>
             <version>2.0.28</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>combinatoricslib</groupId>
+            <artifactId>combinatoricslib</artifactId>
+            <version>2.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
