--- a/pom.xml
+++ b/pom.xml
@@ -1131,8 +1131,8 @@
 
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-stable</artifactId>
-			<version>3.6.9</version>
+			<artifactId>weka</artifactId>
+			<version>3.7.11</version>
             <scope>compile</scope>
 		</dependency>
 		<dependency>
