Doing the use case for sentiment on blogs/sites.

--- a/code/libs/src/main/resources/environments/prd/spring.properties
+++ b/code/libs/src/main/resources/environments/prd/spring.properties
@@ -198,3 +198,7 @@ max-training=1000
 
 # How long the analyzer manager will wait before building the analyzers
 analyzer-manager-wait=15000
+
+country-city-language-coordinate-file-name=cnt-cty-lng-co.properties
+
+max-spelling-distance-allowed=1.0
