--- a/code/libs/src/main/resources/environments/sys/spring.properties
+++ b/code/libs/src/main/resources/environments/sys/spring.properties
@@ -199,3 +199,7 @@ max-training=5000
 
 # How long the analyzer manager will wait before building the analyzers
 analyzer-manager-wait=60000
+
+country-city-language-coordinate-file-name=cnt-cty-lng-co.properties
+
+max-spelling-distance-allowed=1.0
