--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -205,3 +205,7 @@ max-training=10000
 
 # How long the analyzer manager will wait before building the analyzers
 analyzer-manager-wait=3600000
+
+country-city-language-coordinate-file-name=cnt-cty-lng-co.properties
+
+max-spelling-distance-allowed=1.0
