--- a/pom.xml
+++ b/pom.xml
@@ -1376,6 +1376,12 @@
             <version>2.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>arachnid</groupId>
+            <artifactId>arachnid</artifactId>
+            <version>0.4.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
