--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -19,7 +19,7 @@
         <jetty-version>7.6.15.v20140411</jetty-version>
         <jetty-stop-key>stop</jetty-stop-key>
         <jetty-stop-port>9180</jetty-stop-port>
-        <jetty-jvm-args>-Xms512m -Xmx4096m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -Djava.rmi.server.hostname=localhost -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=8500 -Dcom.sun.management.jmxremote.rmi.port=8500 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false</jetty-jvm-args>
+        <jetty-jvm-args>-Xms512m -Xmx4096m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled</jetty-jvm-args>
 	</properties>
 
 	<build>
@@ -95,14 +95,14 @@
 						<id>start-jetty</id>
 						<phase>pre-integration-test</phase>
 						<goals>
-							<goal>run-forked</goal>
+							<goal>run</goal>
 						</goals>
-						<configuration>
-                            <stopKey>${jetty-stop-key}</stopKey>
-                            <stopPort>${jetty-stop-port}</stopPort>
-                            <waitForChild>false</waitForChild>
-                            <jvmArgs>${jetty-jvm-args}</jvmArgs>
-                        </configuration>
+                        <!--<configuration>-->
+                            <!--<stopKey>${jetty-stop-key}</stopKey>-->
+                            <!--<stopPort>${jetty-stop-port}</stopPort>-->
+                            <!--<waitForChild>false</waitForChild>-->
+                            <!--<jvmArgs>${jetty-jvm-args}</jvmArgs>-->
+                        <!--</configuration>-->
 					</execution>
 					<execution>
 						<id>stop-jetty</id>
@@ -110,10 +110,10 @@
 						<goals>
 							<goal>stop</goal>
 						</goals>
-                        <configuration>
-                            <stopKey>${jetty-stop-key}</stopKey>
-                            <stopPort>${jetty-stop-port}</stopPort>
-                        </configuration>
+                        <!--<configuration>-->
+                            <!--<stopKey>${jetty-stop-key}</stopKey>-->
+                            <!--<stopPort>${jetty-stop-port}</stopPort>-->
+                        <!--</configuration>-->
 					</execution>
 				</executions>
 			</plugin>
